--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Document</title>
 </head>
 <body>
-    <header class="container">
+    <header class="container1">
         <div class="box">
             logo
 
