--- a/index.html
+++ b/index.html
@@ -8,18 +8,20 @@
     <title>Document</title>
 </head>
 <body>
-    <header class="container1">
-        <div class="box">
-            logo
+    <header class="container">
+        <div class="boxcontainer">
+            <div class="box">
+                logo
 
-        </div>
-        <div class="box">
-            link link link link link 
+            </div class="box">
+            <div>
+                link link link link link
 
+            </div>
+            <div class="box">
+                login
 
-        </div>
-        <div class="box">
-            login
+            </div>
 
         </div>
 
