--- a/index.html
+++ b/index.html
@@ -10,21 +10,71 @@
 <body>
     <header class="container">
         <div class="boxcontainer">
-            <div class="box">
+            <div class="box1 box">
                 logo
-
-            </div class="box">
-            <div>
+            </div>
+            <div class="box2 box"> 
                 link link link link link
-
             </div>
-            <div class="box">
+            <div class="box3 box">
                 login
-
             </div>
-
         </div>
 
     </header>
+    <main>
+        <div class="container0">
+            <div class="boxcontainer0">
+            </div>
+        </div>
+        <div class="container2">
+            <div class="boxcontainer2">
+                <div class="boxgrande2">
+                </div>
+            </div>
+        </div>
+        <div class="container3">
+            <div class="boxcontainer3">
+                <div class="boxgrande3">
+                <div class="boxpiccolo3">   
+                </div>   
+                </div>
+            </div>
+        </div>
+        <div class="container2">
+            <div class="boxcontainer2">
+                <div class="boxgrande2">
+                </div>
+            </div>   
+        </div>
+        <div class="container5">
+           <div class="boxcontainer5">
+            <div class="container5box1">
+
+            </div>
+            <div class="container5box2">
+
+            </div>
+            <div class="container5box3">
+
+            </div>
+            <div class="container5box4">
+
+            </div>
+            <div class="container5box5">
+            </div>
+           </div>
+        </div>
+    </main>
+    <footer class="container-footer">
+        <div class="boxcontainer-footer">
+            <div class="box-footer1 box">
+                Login
+            </div>
+            <div class="box-footer2 box"> 
+                Bottone
+            </div>
+        </div>    
+    </footer>
 </body>
 </html>
