--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>Document</title>
 </head>
 <body>
+    <!--Menù iniziale-->
     <header class="container">
         <div class="boxcontainer">
             <div class="box1 box">
@@ -20,19 +21,22 @@
                 login
             </div>
         </div>
-
     </header>
     <main>
-        <div class="container0">
-            <div class="boxcontainer0">
+
+        <!--Prima sezione-->
+        <div class="container1">
+            <div class="boxcontainer1">
             </div>
         </div>
-        <div class="container2">
-            <div class="boxcontainer2">
-                <div class="boxgrande2">
+        <!--Seconda sezione-->
+        <div class="container2-4">
+            <div class="boxcontainer2-4">
+                <div class="boxgrande2-4">
                 </div>
             </div>
         </div>
+        <!--terza sezione-->
         <div class="container3">
             <div class="boxcontainer3">
                 <div class="boxgrande3">
@@ -41,12 +45,14 @@
                 </div>
             </div>
         </div>
-        <div class="container2">
-            <div class="boxcontainer2">
-                <div class="boxgrande2">
+        <!--quarta sezione-->
+        <div class="container2-4">
+            <div class="boxcontainer2-4">
+                <div class="boxgrande2-4">
                 </div>
             </div>   
         </div>
+        <!--quinta sezione-->
         <div class="container5">
            <div class="boxcontainer5">
             <div class="container5box1">
@@ -66,6 +72,7 @@
            </div>
         </div>
     </main>
+        <!--Parte finale-->
     <footer class="container-footer">
         <div class="boxcontainer-footer">
             <div class="box-footer1 box">
